@@ -257,10 +257,15 @@ Properties for device type ``bridges:``
           database after a packet is received.
 
      ``priority`` (scalar)
-     :    Set the priority value for the bridge. This value should be an
+     :    Set the priority value for the bridge. This value should be a
           number between ``0`` and ``65535``. Lower values mean higher
           priority. The bridge with the higher priority will be elected as
           the root bridge.
+
+     ``port-priority`` (scalar)
+     :    Set the port priority to <priority>. The priority value is
+          a number between ``0`` and ``63``. This metric is used in the
+          designated port and root port selection algorithms.
 
      ``forward-delay`` (scalar)
      :    Specify the period of time the bridge will remain in Listening and
