@@ -8,6 +8,7 @@ nplan (0.32~16.04.4) UNRELEASED; urgency=medium
   * Re-add snap support patch. (LP: #1747714)
   * Fix syntax for IPv6 addresses in doc. (LP: #1735317)
   * doc: routes are not top-level but per-interface. (LP: #1726695)
+  * Implement bridge port-priority parameter. (LP: #1735821)
 
  -- Mathieu Trudel-Lapierre <cyphermox@ubuntu.com>  Wed, 10 Jan 2018 13:54:07 -0500
 
